# sample-billing-transfer-workflow-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
docs/: CUR_EXPORT_MANAGER.md  IAM_ROLES_AND_POLICIES.md
scripts/: setup.mjs
